--- a/BACKEND/package.json
+++ b/BACKEND/package.json
@@ -14,10 +14,13 @@
   "description": "",
   "dependencies": {
     "@clerk/clerk-sdk-node": "^5.0.49",
+    "axios": "^1.7.8",
     "cors": "^2.8.5",
     "express": "^4.21.0",
     "imagekit": "^5.2.0",
+    "minio": "^8.0.2",
     "mongoose": "^8.7.1",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^3.1.7"
   }
 }
